--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<title>Forrest's Portfolio</title>
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.165ba462.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout.00ab1ec0.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.7b33820f.css" rel="stylesheet">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.d7c22f4e.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.d9d0aa8f.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.0f75fa01.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/paths.ff416e01.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.a330e012.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.753d4b41.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.c24b7fc2.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.4a60e26a.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.49c6daad.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.4c5497be.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/paths.2ba5b2ad.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.eb521fe4.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.11d97ee1.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.2b2a2540.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.js.fb1865a6.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/_layout.da46b06b.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_page.svelte.611c09c3.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_page.svelte.0389cb4d.mjs">
 	</head>
 	<body>
 		<div>
@@ -25,7 +26,8 @@
 
 
 <div><nav id="navbar" class="z-50 flex flex-col items-center absolute top-0 left-0 gutter w-full xl:top-4"><div class="flex items-center justify-between w-full py-6 lg:px-8">
-    <div><a href="" class="text-[#163A37] font-black text-2xl md:text-4xl tracking-wide">Forrest S
+    <div class="flex gap-4 items-center"><img class="w-10 rounded-[50%]" src="/images/profile.jpeg" alt="profile pic">
+      <a href="" class="text-[#163A37] font-black text-2xl md:text-4xl tracking-wide">Forrest S
       </a></div>
     
     <div class="transition-all md:hidden  svelte-1vjugqk"></div>
@@ -109,7 +111,7 @@
 </div>
     </section></div>
 
-<section id="section4"><section class="gutter py-16 lg:py-32 xl:py-64"><h3 class="text-center text-primaryColor text-2xl font-black font-fraunces uppercase tracking-[0.25rem] md:py-10 md:text-3xl underline">Personal Ventures
+<section id="section4"><section class="gutter py-16 lg:py-24 xl:py-32"><h3 class="text-center text-primaryColor text-2xl font-black font-fraunces uppercase tracking-[0.25rem] md:py-10 md:text-3xl underline">Personal Ventures
   </h3>
   
   <section class="md:grid lg:grid-cols-2 gap-10 max-w-[1400px] mx-auto"><div class="svelte-gmkbs6"><section class="flex flex-col items-center mt-24 first-of-type:mt-16 gap-8 text-center"><a href="https://charactersoflordoftherings.surge.sh/" target="_blank" class="w-1/2 rounded"><img src="/images/lotr-app.png" alt="App screenshot"></a>
@@ -157,7 +159,7 @@
 			
 			<script>
 				{
-					__sveltekit_s26yuq = {
+					__sveltekit_1w2r4ye = {
 						env: {},
 						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
 						element: document.currentScript.parentElement
@@ -166,10 +168,10 @@
 					const data = [null,{"type":"data","data":{photos:{test:""},features:[{title:"Innovative Solutions",content:"As a web developer with a vast range of experience, I bring a unique perspective to the table. My background includes roles such as a Military Aviation Mechanic, a Warehouse General Mechanic, a Warehouse Production Worker, a Shipping\u002FReceiving Coordinator, and a Construction Project Manager. Through these roles, I've honed my problem-solving skills, attention to detail, and ability to work efficiently in fast-paced environments. This diverse background has given me the ability to adapt quickly to new challenges and has shaped me into a well-rounded developer.",color:"yellow",mobileImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1577209299418-485f60c0d4de?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1069&q=80",desktopImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1577209299418-485f60c0d4de?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1069&q=80",id:"1"},{title:"Experienced Leadership",content:"My path to tech was not a straight line, but I believe this has given me a well-rounded perspective and a strong work ethic. I understand the importance of clear communication, setting expectations, and meeting deadlines. My experience in project management has also taught me to be proactive and anticipate problems before they occur. I am always looking for ways to improve my skills and stay up-to-date with the latest technologies, which ensures that my clients always receive the best possible service.",color:"red",mobileImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1441974231531-c6227db76b6e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",desktopImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1441974231531-c6227db76b6e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",id:"2"}],services:[{title:"Front End",content:"Front End technologies",colorTheme:"green",mobileImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1421789665209-c9b2a435e3dc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",desktopImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1421789665209-c9b2a435e3dc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",id:"1"},{title:"Back End",content:"Back End technologies",colorTheme:"green",mobileImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1616683955867-4049d9b78977?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",desktopImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1616683955867-4049d9b78977?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",id:"2"}],projects:[{image:"\u002Fimages\u002Flotr-app.png",url:"https:\u002F\u002Fcharactersoflordoftherings.surge.sh\u002F",content:"This full-stack application connects to The-One-API to retrieve character information from the Lord of the Rings franchise. Each card displays detailed character information and, if available, famous movie quotes. The front-end is built using React, while the back-end is powered by Node.js and Express.",title:"Characters of the Lord of the Rings",technologies:["React"],id:1},{image:"\u002Fimages\u002Fbounty-hunter-app.png",url:"",content:"This is a full-stack application that utilizes a database for storing bounties. Users can add bounties to the database and track their progress. The front-end is built using React, while the back-end is powered by Node.js and Express. The database is managed using MongoDB and Mongoose, which facilitates schema creation.",title:"Bounty Hunter",technologies:["React","Express.js","Node.js"],id:2},{image:"\u002Fimages\u002Fbooks-weve-read.png",url:"",content:"This web application serves as a book database, allowing users to add books along with their respective authors and genres. Users can either add a new book or explore existing books, genres, and authors. The front-end of the application is built using the React library, with react-router facilitating the routing of different views. The back-end is powered by the Express\u002FNode.js framework, with MongoDB as the database for book storage. The Mongoose library is used for schema creation and object-document mapping. The application also features authentication via token-based encryption. The application is live on the Heroku platform.",title:"Books We've Read Database",technologies:["React","Express.js","Node.js","MongoDB"],id:3},{image:"\u002Fimages\u002Fexercise-tracker.png",url:"",content:"The Exercise Tracker application incorporates authentication and login features to enable users to securely track their workouts and participate in the forum. The front-end of the application is built with React, utilizing react-router for effective routing, while the back-end is powered by Node.js and Express. MongoDB serves as the database, with Mongoose supporting schema creation and object-document mapping. The app ensures security through token-based authentication and encryption. Additionally, the application is hosted live on Heroku for easy access.",title:"Exercise Tracker\u002FForum",technologies:["React","Express.js","Node.js","MongoDB"],id:4}],gallery:[{desktopImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673766791276-5f46fd720021?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=885&q=80",mobileImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673766791276-5f46fd720021?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=885&q=80",alt:"Milk bottles",id:1},{desktopImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673560199041-21c35ef9dac1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",mobileImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673560199041-21c35ef9dac1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",alt:"Orange",id:2},{desktopImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673412425052-054cac55e735?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDY1fDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60",mobileImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673412425052-054cac55e735?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDY1fDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60",alt:"Cone",id:3},{desktopImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1672738575910-821e3289f334?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80",mobileImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1672738575910-821e3289f334?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80g",alt:"Sugar cubes",id:4}]},"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.d7c22f4e.mjs"),
-						import("./_app/immutable/entry/app.a330e012.mjs")
+						import("./_app/immutable/entry/start.4a60e26a.mjs"),
+						import("./_app/immutable/entry/app.eb521fe4.mjs")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_s26yuq.element, {
+						kit.start(app, __sveltekit_1w2r4ye.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
