--- a/projects.html
+++ b/projects.html
@@ -2,20 +2,21 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<title>Forrest's Portfolio</title>
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.165ba462.css" rel="stylesheet">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.d7c22f4e.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.d9d0aa8f.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.0f75fa01.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/paths.ff416e01.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.a330e012.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.753d4b41.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.c24b7fc2.mjs">
+		<link href="./_app/immutable/assets/_layout.00ab1ec0.css" rel="stylesheet">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.4a60e26a.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.49c6daad.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.4c5497be.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/paths.2ba5b2ad.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.eb521fe4.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.11d97ee1.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.2b2a2540.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.js.fb1865a6.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/_layout.da46b06b.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/projects-page.svelte.4a24512f.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/projects-page.svelte.aeceb142.mjs">
 	</head>
 	<body>
 		<div>
@@ -24,7 +25,8 @@
 
 
 <div><nav id="navbar" class="z-50 flex flex-col items-center absolute top-0 left-0 gutter w-full xl:top-4"><div class="flex items-center justify-between w-full py-6 lg:px-8">
-    <div><a href="" class="text-[#163A37] font-black text-2xl md:text-4xl tracking-wide">Forrest S
+    <div class="flex gap-4 items-center"><img class="w-10 rounded-[50%]" src="/images/profile.jpeg" alt="profile pic">
+      <a href="" class="text-[#163A37] font-black text-2xl md:text-4xl tracking-wide">Forrest S
       </a></div>
     
     <div class="transition-all md:hidden  svelte-1vjugqk"></div>
@@ -59,7 +61,7 @@
 			
 			<script>
 				{
-					__sveltekit_s26yuq = {
+					__sveltekit_1w2r4ye = {
 						env: {},
 						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
 						element: document.currentScript.parentElement
@@ -68,10 +70,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.d7c22f4e.mjs"),
-						import("./_app/immutable/entry/app.a330e012.mjs")
+						import("./_app/immutable/entry/start.4a60e26a.mjs"),
+						import("./_app/immutable/entry/app.eb521fe4.mjs")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_s26yuq.element, {
+						kit.start(app, __sveltekit_1w2r4ye.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
