--- a/projects.html
+++ b/projects.html
@@ -7,12 +7,12 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.00ab1ec0.css" rel="stylesheet">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.4a60e26a.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.92fe7ded.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.49c6daad.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.4c5497be.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/paths.2ba5b2ad.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.eb521fe4.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.11d97ee1.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.5e11c762.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/paths.4a9ec570.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.4bda0686.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.0c81c1b3.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.2b2a2540.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.js.fb1865a6.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/_layout.da46b06b.mjs">
@@ -61,7 +61,7 @@
 			
 			<script>
 				{
-					__sveltekit_1w2r4ye = {
+					__sveltekit_tqx8z5 = {
 						env: {},
 						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
 						element: document.currentScript.parentElement
@@ -70,10 +70,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4a60e26a.mjs"),
-						import("./_app/immutable/entry/app.eb521fe4.mjs")
+						import("./_app/immutable/entry/start.92fe7ded.mjs"),
+						import("./_app/immutable/entry/app.4bda0686.mjs")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1w2r4ye.element, {
+						kit.start(app, __sveltekit_tqx8z5.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
