--- a/projects.html
+++ b/projects.html
@@ -6,20 +6,20 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.eccb9529.css" rel="stylesheet">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.3c231935.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.e66162e0.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.8bebff23.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/paths.66d3880b.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.f67cfe89.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.2a8705aa.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.f50c323b.mjs">
+		<link href="./_app/immutable/assets/_layout.3397375a.css" rel="stylesheet">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.90445ebb.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.d103ca8f.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.5893ad87.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/paths.2e1c7fb8.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.4fb5b7e3.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.a8fb8abc.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.d734a750.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.js.fb1865a6.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/_layout.da46b06b.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/projects-page.svelte.e71d14bd.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/projects-page.svelte.77b28540.mjs">
 	</head>
 	<body>
-		
+		<div>
 
 
 
@@ -47,8 +47,8 @@
 <main><h1>project page</h1></main>
 <footer id="footer" class="bg-shadowColor p-2 py-16 flex flex-col md:flex-row gap-8 justify-around items-center"><section><div class="ml-6 mr-6 mb-2 text-secondaryColor font-black text-2xl md:text-4xl tracking-wide text-center">Forrest S
     </div>
-    <ul class="flex justify-center items-center gap-6"><li><a href="https://www.linkedin.com/in/yulerik"></a></li>
-      <li><a href="https://www.github.com/forrest-s"></a></li></ul></section>
+    <ul class="flex justify-center items-center gap-6"><li><a href="https://www.linkedin.com/in/yulerik" target="_blank" rel="noreferrer"></a></li>
+      <li><a href="https://www.github.com/forrest-s" target="_blank" rel="noreferrer"></a></li></ul></section>
   <form class="flex flex-col p-4 rounded gap-1 text-accentColor bg-primaryColor" action="https://formspree.io/f/xrgvbvqr" method="POST" accept-charset="utf-8" name="simple-contact-form"><p>Feel free to contact me for any inquires or opportunities.</p>
     <label for="full-name" class="text-tertiaryColor">Name</label>
     <input id="full-name" name="name" type="text" class="bg-primaryColor border-b-2 border-black" value="">
@@ -63,7 +63,7 @@
 			
 			<script>
 				{
-					__sveltekit_17hqylb = {
+					__sveltekit_h7oxw4 = {
 						env: {},
 						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
 						element: document.currentScript.parentElement
@@ -72,10 +72,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3c231935.mjs"),
-						import("./_app/immutable/entry/app.f67cfe89.mjs")
+						import("./_app/immutable/entry/start.90445ebb.mjs"),
+						import("./_app/immutable/entry/app.4fb5b7e3.mjs")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_17hqylb.element, {
+						kit.start(app, __sveltekit_h7oxw4.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
@@ -84,6 +84,6 @@
 					});
 				}
 			</script>
-		
+		</div>
 	</body>
 </html>
